--- a/CheckPuya.Core/CheckPuya.Core.csproj
+++ b/CheckPuya.Core/CheckPuya.Core.csproj
@@ -1,12 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Gabriel.Cat.S.Check" Version="1.0.3" />
-    <PackageReference Include="Gabriel.Cat.S.Xarxa" Version="1.0.1" />
+    <PackageReference Include="Gabriel.Cat.S.Check" Version="1.0.7" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.34" />
   </ItemGroup>
 
