--- a/CheckPuya.Core/CheckPuya.Core.csproj
+++ b/CheckPuya.Core/CheckPuya.Core.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="HtmlAgilityPack" Version="1.11.34" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\JDownloader.Utilities\JDownloader.Utilities.csproj" />
+  </ItemGroup>
+
 </Project>
